dependencies updated - Java 17, Spring 5, gradle 7.3