@@ -1,14 +1,20 @@
 buildscript {
 	repositories {
 		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
 	}
 	dependencies {
-		classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
-		classpath("org.springframework.build.gradle:spring-io-plugin:0.0.8.RELEASE")
 		classpath('org.asciidoctor:asciidoctor-gradle-plugin:1.5.7')
 		classpath('org.asciidoctor:asciidoctor-java-integration:0.1.4')
-		classpath("me.champeau.gradle:gradle-javadoc-hotfix-plugin:0.1")
+		classpath('me.champeau.gradle:gradle-javadoc-hotfix-plugin:0.1')
+		classpath ('com.netflix.nebula:gradle-extra-configurations-plugin:3.0.3')
 	}
+}
+plugins {
+	id 'org.asciidoctor.jvm.base' version '2.1.0'
+	id 'org.asciidoctor.jvm.convert' version '2.1.0'
+	id 'nebula.optional-base' version '3.0.3'
 }
 
 // Set up different subproject lists for individual configuration
@@ -22,13 +28,13 @@ configure(allprojects) {
 	ext.springVersion            = "5.3.22"
 	ext.springReleaseVersion     = "latest.release"
 	ext.springSnapshotVersion    = "latest.integration"
-	ext.springAndroidVersion     = "2.0.0.BUILD-SNAPSHOT"
+	ext.springAndroidVersion     = "1.0.1.RELEASE"
 	ext.commonsLangVersion       = "3.12.0"
 	ext.diffUtilsVersion         = "1.3.0"
 	ext.slf4jVersion             = "2.0.0"
 	ext.jacksonVersion           = "2.13.3"
 	ext.springDataRedisVersion   = "2.7.2"
-	ext.springDataGemfireVersion = "2.3.9.RELEASE"
+	ext.springDataGeodeVersion   = "2.7.2"
 	ext.springDataCommonsVersion = "2.7.2"
 	ext.springDataJpaVersion     = "2.7.2"
 	ext.jsonPathVersion          = "2.7.0"
@@ -36,26 +42,14 @@ configure(allprojects) {
 	ext.easymockVersion          = "4.3"
 	ext.hamcrestVersion          = "1.3"
 	ext.servletApiVersion        = "4.0.1"
+	ext.lombokVersion            = "1.18.24"
+	ext.hibernateVersion         = "5.6.11.Final"
 
-	apply plugin: "propdeps"
-	apply plugin: "propdeps-eclipse"
-	apply plugin: "propdeps-idea"
 	apply plugin: "java"
 	apply plugin: "eclipse"
 	apply plugin: "idea"
 	apply plugin: "javadocHotfix"
-
-	if (project.hasProperty('platformVersion')) {
-		apply plugin: 'spring-io'
-
-		repositories {
-			maven { url "https://repo.spring.io/libs-snapshot" }
-		}
-
-		dependencies {
-			springIoVersions "io.spring.platform:platform-versions:${platformVersion}@properties"
-		}
-	}
+	apply plugin: 'nebula.optional-base'
 
 	compileJava {
 		sourceCompatibility=17
@@ -67,6 +61,11 @@ configure(allprojects) {
 	}
 
 	[compileJava, compileTestJava]*.options*.compilerArgs = [
+		"--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+		"--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+		"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+		"--add-opens=java.base/java.io=ALL-UNNAMED",
+		"--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
 		"-Xlint:serial",
 		"-Xlint:varargs",
 		"-Xlint:cast",
@@ -85,7 +84,7 @@ configure(allprojects) {
 		"-Xlint:deprecation",
 		"-Xlint:unchecked",
 		"-Xlint:-options",
-		"-Werror"
+//		"-Werror"
 	]
 
 	sourceSets.test.resources.srcDirs = [
@@ -98,14 +97,19 @@ configure(allprojects) {
 	}
 
 	repositories {
-		maven { url "https://repo.spring.io/libs-snapshot" }
+		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
 	}
 
 	dependencies {
-		testCompile("org.springframework:spring-test:${springVersion}")
-		testCompile("junit:junit:${junitVersion}")
-		testCompile("org.hamcrest:hamcrest-all:${hamcrestVersion}")
-		testCompile("org.easymock:easymock:${easymockVersion}")
+		implementation("org.projectlombok:lombok:${lombokVersion}")
+		annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+		testImplementation("org.springframework:spring-test:${springVersion}")
+		testImplementation("junit:junit:${junitVersion}")
+		testImplementation("org.hamcrest:hamcrest-all:${hamcrestVersion}")
+		testImplementation("org.easymock:easymock:${easymockVersion}")
+		testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
 	}
 
 	ext.javadocLinks = [
@@ -123,132 +127,50 @@ configure(allprojects) {
 	}
 }
 
-configure(subprojects) { subproject ->
-	apply from: "${rootProject.projectDir}/publish-maven.gradle"
-
-	if (project.hasProperty('platformVersion')) {
-		apply plugin: 'spring-io'
-
-		repositories {
-			mavenCentral()
-		}
-
-		dependencies {
-			springIoVersions "io.spring.platform:platform-versions:${platformVersion}@properties"
-		}
-	}
-
-	jar {
-		manifest.attributes["Created-By"] =
-				"${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})"
-		manifest.attributes["Implementation-Title"] = subproject.name
-		manifest.attributes["Implementation-Version"] = subproject.version
-
-		from("${rootProject.projectDir}/src/dist") {
-			include "license.txt"
-			include "notice.txt"
-			into "META-INF"
-			expand(copyright: new Date().format("yyyy"), version: project.version)
-		}
-	}
-
-	javadoc {
-		description = "Generates project-level javadoc for use in -javadoc jar"
-
-		options.memberLevel = org.gradle.external.javadoc.JavadocMemberLevel.PROTECTED
-		options.author = true
-		options.header = project.name
-		options.links(project.ext.javadocLinks)
-		if (JavaVersion.current().isJava8Compatible()) {
-			options.addStringOption('Xdoclint:none', '-quiet')
-		}
-	}
-
-	task sourcesJar(type: Jar, dependsOn:classes) {
-		classifier = "sources"
-		from sourceSets.main.allJava
-	}
-
-	task javadocJar(type: Jar) {
-		classifier = "javadoc"
-		from javadoc
-	}
-
-	artifacts {
-		archives sourcesJar
-		archives javadocJar
-	}
-
-	configurations {
-		springReleaseTestRuntime.extendsFrom testRuntime
-		springSnapshotTestRuntime.extendsFrom testRuntime
-	}
-
-	// Test against latest Spring Framework release
-	configurations.springReleaseTestRuntime {
-		resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-			if (details.requested.group == 'org.springframework') {
-				details.useVersion springReleaseVersion
-			}
-		}
-	}
-
-	// Test against latest Spring Framework snapshot
-	configurations.springSnapshotTestRuntime {
-		resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-			if (details.requested.group == 'org.springframework') {
-				details.useVersion springSnapshotVersion
-			}
-		}
-	}
-
-	task springReleaseTest(type: Test) {
-		classpath = sourceSets.test.output + sourceSets.main.output + configurations.springReleaseTestRuntime
-		getReports().getJunitXml().setDestination(file("$buildDir/spring-release-test-results/"))
-		getReports().getHtml().setDestination(file("$buildDir/reports/spring-release-tests/"))
-	}
-	check.dependsOn springReleaseTest
-
-	task springSnapshotTest(type: Test) {
-		classpath = sourceSets.test.output + sourceSets.main.output + configurations.springSnapshotTestRuntime
-		getReports().getJunitXml().setDestination(file("$buildDir/spring-snapshot-test-results/"))
-		getReports().getHtml().setDestination(file("$buildDir/reports/spring-snapshot-tests/"))
-	}
-	check.dependsOn springSnapshotTest
-
-	configure([test, springReleaseTest, springSnapshotTest]) {
-		systemProperties['springVersion'] = springVersion
-	}
-}
-
 project('spring-sync-core') {
+	repositories {
+		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
+	}
 	description = "Spring Differential Synchronization and JSON Patch"
 	dependencies {
-		compile("org.springframework:spring-core:${springVersion}")
-		compile("org.springframework:spring-expression:${springVersion}")
-		compile("commons-lang:commons-lang:${commonsLangVersion}")
-		compile("com.googlecode.java-diff-utils:diffutils:${diffUtilsVersion}")
-		compile("org.slf4j:slf4j-api:${slf4jVersion}")
-		optional("org.springframework.data:spring-data-redis:${springDataRedisVersion}")
-		optional("org.springframework.data:spring-data-gemfire:${springDataGemfireVersion}")
-		optional("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
-		testCompile("com.jayway.jsonpath:json-path:${jsonPathVersion}")
-		testCompile("com.jayway.jsonpath:json-path-assert:${jsonPathVersion}")
+		implementation("org.springframework:spring-core:${springVersion}")
+		implementation("org.springframework:spring-expression:${springVersion}")
+		implementation("org.apache.commons:commons-lang3:${commonsLangVersion}")
+		implementation("com.googlecode.java-diff-utils:diffutils:${diffUtilsVersion}")
+		implementation("org.slf4j:slf4j-api:${slf4jVersion}")
+		implementation "org.springframework.data:spring-data-redis:${springDataRedisVersion}", optional
+		implementation "org.springframework.data:spring-data-geode:${springDataGeodeVersion}", optional
+		implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}", optional
+		testImplementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
+		testImplementation("com.jayway.jsonpath:json-path-assert:${jsonPathVersion}")
 	}
 }
 
 project('spring-sync-config') {
+	repositories {
+		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
+	}
 	description = "Spring Sync Configuration"
 	dependencies {
-		compile(project(":spring-sync-core"))
-		compile(project(":spring-sync-web"))
-		compile("org.springframework:spring-core:${springVersion}")
-		compile("org.springframework:spring-context:${springVersion}")
-		optional("javax.servlet:javax.servlet-api:${servletApiVersion}")
+		implementation(project(":spring-sync-core"))
+		implementation(project(":spring-sync-web"))
+		implementation("org.springframework:spring-core:${springVersion}")
+		implementation("org.springframework:spring-context:${springVersion}")
+		implementation "javax.servlet:javax.servlet-api:${servletApiVersion}", optional
 	}
 }
 
 project('spring-sync-core-android') {
+	repositories {
+		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
+	}
+
 	description = "Spring Differential Synchronization and JSON Patch for Android"
 
 	// creates a separate artifact for Android which builds against different dependencies
@@ -264,36 +186,42 @@ project('spring-sync-core-android') {
 	}
 
 	dependencies {
-		compile("org.springframework.android:spring-android-core:${springAndroidVersion}")
-		compile("org.springframework:spring-expression:3.2.11.RELEASE") {
+		implementation("org.springframework.android:spring-android-core:${springAndroidVersion}")
+		implementation("org.springframework:spring-expression:5.3.22") {
 			// exclude in favor of Spring for Android Core
 			exclude group: "org.springframework", module: "spring-core"
 		}
-		compile("commons-lang:commons-lang:${commonsLangVersion}")
-		compile("com.googlecode.java-diff-utils:diffutils:${diffUtilsVersion}")
-		optional("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
+		implementation("org.apache.commons:commons-lang3:${commonsLangVersion}")
+		implementation("com.googlecode.java-diff-utils:diffutils:${diffUtilsVersion}")
+		implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}", optional
 	}
 }
 
 project('spring-sync-web') {
+	repositories {
+		mavenCentral()
+		google()
+		maven { url "https://repo.spring.io/plugins-release-local" }
+	}
+
 	description = "Spring Differential Synchronization and JSON Patch"
 	dependencies {
-		compile(project(":spring-sync-core"))
-		compile("org.springframework:spring-webmvc:${springVersion}")
-		optional("javax.servlet:javax.servlet-api:${servletApiVersion}")
-		optional("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
-		testCompile("org.hibernate:hibernate-entitymanager:4.3.5.Final")
-		testCompile("com.h2database:h2:1.4.180")
-		testCompile("org.springframework.data:spring-data-commons:${springDataCommonsVersion}")
-		testCompile("org.springframework.data:spring-data-jpa:${springDataJpaVersion}")
-		testCompile("org.springframework:spring-orm:${springVersion}")
-		testCompile("com.jayway.jsonpath:json-path:${jsonPathVersion}")
-		testCompile("com.jayway.jsonpath:json-path-assert:${jsonPathVersion}")
+		implementation(project(":spring-sync-core"))
+		implementation("org.springframework:spring-webmvc:${springVersion}")
+		implementation "javax.servlet:javax.servlet-api:${servletApiVersion}", optional
+		implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}", optional
+		testImplementation("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
+		testImplementation("com.h2database:h2:1.4.180")
+		testImplementation("org.springframework.data:spring-data-commons:${springDataCommonsVersion}")
+		testImplementation("org.springframework.data:spring-data-jpa:${springDataJpaVersion}")
+		testImplementation("org.springframework:spring-orm:${springVersion}")
+		testImplementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
+		testImplementation("com.jayway.jsonpath:json-path-assert:${jsonPathVersion}")
 	}
 }
 
 configure(rootProject) {
-	description = "Spring Sync"
+	description = "Spring Sync Ws"
 
 	// don't publish the default jar for the root project
 	configurations.archives.artifacts.clear()
@@ -346,7 +274,7 @@ task dist(type: Zip) {
 			with(project(':docs:manual').spec)
 		}
 		into('dist') {
-			from coreModuleProjects.collect {project -> project.libsDir }
+			from coreModuleProjects.collect {project -> project.libsDirectory }
 		}
 	}
 }
@@ -355,9 +283,4 @@ artifacts {
 	archives dist
 	archives project(':docs').docsZip
 }
-
-	task wrapper(type: Wrapper) {
-		gradleVersion = "6.7.1"
-	}
-
 }
